@@ -22,6 +22,9 @@ our %EXPORT_TAGS = ( 'all' => [ qw(
 our @EXPORT_OK = ( @{ $EXPORT_TAGS{'all'} } );
 
 our @EXPORT = qw(
+  wzd_fini
+  wzd_init
+  wzd_send_message
 	
 );
 
@@ -38,18 +41,24 @@ __END__
 
 =head1 NAME
 
-wzdftpd - Perl extension for blah blah blah
+wzdftpd - Perl extension for libwzd (wzdftpd)
 
 =head1 SYNOPSIS
 
   use wzdftpd;
-  blah blah blah
+
+  wzd_init("localhost",21,"wzdftpd","wzdftpd") or die "unable to connect";
+
+  my @reply = wzd_send_message("site who");
+  foreach my $line (@reply) {
+    print "$line\n";
+  }
+
+  wzd_fini();
 
 =head1 DESCRIPTION
 
-Stub documentation for wzdftpd, created by h2xs. It looks like the
-author of the extension was negligent enough to leave the stub
-unedited.
+The wzdftpd allows you to control/send commands to a wzdftpd server.
 
 Blah blah blah.
 
@@ -61,6 +70,8 @@ None by default.
 
 =head1 SEE ALSO
 
+=head2 RFC
+
 Mention other useful documentation such as the documentation of
 related modules or operating system documentation (such as man pages
 in UNIX), or any relevant external documentation such as RFCs or
@@ -68,15 +79,17 @@ standards.
 
 If you have a mailing list set up for your module, mention it here.
 
-If you have a web site set up for your module, mention it here.
+=head2 URLs
+
+Homepage: http://www.wzdftpd.net
 
 =head1 AUTHOR
 
-A. U. Thor, E<lt>pollux@E<gt>
+Pierre Chifflier, E<lt>pollux@cpe.frE<gt>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (C) 2004 by A. U. Thor
+Copyright (C) 2004 by Pierre Chifflier
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.4 or,
