@@ -3,6 +3,8 @@
 	* feature: use statvfs instead of statfs if detected
 	* feature: option "reject_unknown_user" to reject users after USER command
 	* feature: the main part (server+lib) now compiles on solaris
+	* feature: libwzd-perl now works: wzd_send_message added
+	* bugfix: build error on openbsd (crypt.h)
 
 2005-01-12  Pierre Chifflier  <pollux@cpe.fr>
 
